# linux-admin

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md
.grok/: config.toml
.grok/agents/: linux-admin.md  linux-admin.system.md
config/: ollama.env
docs/: credentials.md  offline.md  ollama-models.md  security.md
mcp/linux_admin/: README.md  pyproject.toml
mcp/linux_admin/src/linux_admin_mcp/: __init__.py  executil.py  server.py
mcp/linux_admin/src/linux_admin_mcp/creds/: __init__.py  cli.py  host_id.py  import_file.py  store.py
mcp/linux_admin/src/linux_admin_mcp/elevate/: __init__.py  askpass.py  probe.py  runner.py
mcp/linux_admin/src/linux_admin_mcp/tools/: __init__.py  journal.py  network.py  packages.py  resources.py  systemd.py
scripts/: bootstrap.sh  doctor-offline.sh  doctor.sh  ensure-local-model.sh  install-user-models.sh  lib-env.sh  linux-admin  linux-admin-askpass  pick-admin-model.py  register-user-mcp.sh  sudoers.example
skills/boot-health/: SKILL.md
skills/diagnose-service/: SKILL.md
skills/disk-pressure/: SKILL.md
skills/network-diagnose/: SKILL.md
skills/package-update/: SKILL.md
skills/privilege-setup/: SKILL.md
tests/: test_creds.py  test_elevate.py  test_executil.py  test_systemd_sanitize.py
