[project]
name = "linux-admin-mcp"
version = "0.1.0"
description = "Local Linux administration MCP server (offline-capable core path)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
]

[project.optional-dependencies]
keyring = ["keyring>=25.0.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
linux-admin-mcp = "linux_admin_mcp.server:main"
linux-admin-creds = "linux_admin_mcp.creds.cli:main"
linux-admin-askpass = "linux_admin_mcp.elevate.askpass:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linux_admin_mcp"]

[tool.hatch.build.targets.wheel.sources]
"src/linux_admin_mcp" = "linux_admin_mcp"

[tool.pytest.ini_options]
testpaths = ["../../tests"]
pythonpath = ["src"]
